--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
         <ul></ul>
       </nav>
       <section>
-        <h2 id="welcome-to-github-pages">Welcome to GitHub Pages</h2>
+        <h2 id="welcome-to-github-pages">Welcome to moharram82 Pages</h2>
 
 <p>You can use the <a href="https://github.com/moharram82/moharram82.github.io/edit/master/README.md">editor on GitHub</a> to maintain and preview the content for your website in Markdown files.</p>
 
