--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,8 @@
       </nav>
       <section>
         <h2 id="welcome-to-github-pages">Welcome to moharram82 Pages</h2>
+	      
+	 {{ content }}
 
 <p>You can use the <a href="https://github.com/moharram82/moharram82.github.io/edit/master/README.md">editor on GitHub</a> to maintain and preview the content for your website in Markdown files.</p>
 
