--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@
   </head>
   <body>
     <header>
-      <h1>{{ site.title | default: site.github.repository_name }}</h1>
-	  <p></p>
+      <h1>Mohammed Moharram (moharram82)</h1>
+      <p>Web Designer &amp; Developer</p>
     </header>
 	
 	<div id="banner">
