--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
             </nav>
             <section>
                 <div id="profile_pic">
-                    <img src="/moharram82/moharram82.github.io/blob/master/_layouts/Profile.jpg" alt="Profile Picture">
+                    <img src="https://github.com/moharram82/moharram82.github.io/blob/master/_layouts/Profile.jpg" alt="Profile Picture">
                 </div><!-- end of #profile_pic -->
                 
                 {{ content }}
