--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
             </nav>
             <section>
                 <div id="profile_pic">
-                    <img src="https://github.com/moharram82/moharram82.github.io/blob/master/_layouts/Profile.jpg" alt="Profile Picture">
+                    <img src="https://scontent.fruh1-1.fna.fbcdn.net/v/t1.0-9/12705358_10154638062603636_87158626420710808_n.jpg?oh=2911ef56f4ad2500c6385185c9331bf3&oe=5924881E" alt="Profile Picture">
                 </div><!-- end of #profile_pic -->
                 
                 {{ content }}
