--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,10 @@
         
         <style>
             #profile_pic {
+                padding: 0 0 20px 20px;
                 float: right;
+                border: 1px solid #cccccc;
+                border-radius: 3px;
             }
         </style>
     </head>
