--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
         
         <style>
-            #profile_pic {
+            #profile_pic img {
                 padding: 0 0 20px 20px;
                 float: right;
                 border: 1px solid #cccccc;
