--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
         
         <style>
-            #profile_pic img {
+            #profile_pic {
                 padding: 0 0 20px 20px;
                 float: right;
                 border: 1px solid #cccccc;
@@ -33,9 +33,7 @@
                 <ul></ul>
             </nav>
             <section>
-                <div id="profile_pic">
-                    <img src="https://scontent.fruh1-1.fna.fbcdn.net/v/t1.0-9/12705358_10154638062603636_87158626420710808_n.jpg?oh=2911ef56f4ad2500c6385185c9331bf3&oe=5924881E" alt="Profile Picture">
-                </div><!-- end of #profile_pic -->
+                <img id="profile_pic" src="https://scontent.fruh1-1.fna.fbcdn.net/v/t1.0-9/12705358_10154638062603636_87158626420710808_n.jpg?oh=2911ef56f4ad2500c6385185c9331bf3&oe=5924881E" alt="Profile Picture">
                 
                 {{ content }}
                 
