--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,9 @@
         
         <style>
             #profile_pic {
-                padding: 0 0 20px 20px;
+                margin: 0 0 20px 20px;
+                width: 200px;
+                height: 200px;
                 float: right;
                 border: 1px solid #cccccc;
                 border-radius: 3px;
